# unoc-repo

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER_README.md  Dockerfile.backend  LICENSE  README.md  RECOVERY_STATUS.md  check_aon_topology.py  check_db.py  check_db_schema.py  check_db_temp.py  conftest.py  create_conftest.py  db_test.py  debug_db_check.py  debug_output.txt  debug_pon_matching.py  debug_pon_occupancy.py  debug_reachability.py  docker-compose.monitoring.yml  docker-compose.yml  docker-compose.yml.backup  docker-start.ps1  file_length_violations.json  gunicorn.conf.py  init_postgres_for_tests.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  status_profile_200dev.txt  status_profile_200dev_calls.txt  test_bulk_api.py  test_bulk_ports.py  (+16 more)
.github/: copilot-instructions.md
backend/: __init__.py  db.py  error_handlers.py  errors.py  events.py  link_rules.py  main.py  models.py  provisioning.py  utils.py
docs/: AUDIT_BACKLOG.md  DOCUMENTATION-CLEANUP-PLAN.md  GO-SERVICES-OVERVIEW.md  LLMTOOLSET.toolsets.jsonc  README.md  container-layouts.json  local_start.md  performance.md
engine-go/: Dockerfile.batch  Dockerfile.optical  Dockerfile.status  Dockerfile.traffic  README_SERVICES.md  benchmark_results.txt  check_db.py  debug_output.txt  go.mod  go.sum  start_server.ps1  stop_server.ps1  test_api.py
problems/: 127.0.0.1.har  DB_POOL_EXHAUSTION_FIX.md  backendOutput.txt  chromeDev.txt  debug.json  debug_new1.json  debug_olt.json  fullsnap.json  grafna.md  localhost.har  missing_integration_services.txt  oldLLM.txt  traffic-engine_service.txt  vscode_problems.json
prompts/: INSTRUCTIONS.instructions.md  LLMTOOL.toolsets.jsonc  LLMTOOL.toolsets.jsonc.backup  README.MD.prompt.md
proto/: Makefile  generate.ps1
scripts/: README.md  assign_default_hardware.py  benchmark_api_latency_realistic.py  benchmark_batch_64_links.py  (+56 more)
(+734 files in other folders)
